# python-poetry-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
tests/: factorial_test.py
